[package]
name = "spartan_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spartan = "0.8.0"
merlin = "3.0.0"
curve25519-dalek = { version = "3.2.0", features = ["serde", "u64_backend", "alloc"]}
rand = { version = "0.7.3", features = ["getrandom"] }