[package]
name = "tfhe_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { version = "*", features = [
    "boolean",
    "shortint",
    "integer",
    "x86_64-unix",
] }
rsa = "0.9.2"
rand = "0.8"
serde = { version = "1.0.183", features = ["derive"] }
bincode = "1.3.3"
